# src/main/java/com/finalproject/easyjob/controller/mapper/UserMapper.java
@@ -1,40 +1,31 @@
 package com.finalproject.easyjob.controller.mapper;
 
+import com.finalproject.easyjob.model.Domain;
 import com.finalproject.easyjob.model.User;
 import com.finalproject.easyjob.model.rest.RestUser;
 import com.finalproject.easyjob.security.model.Role;
+import com.finalproject.easyjob.service.DomainService;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneId;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
 @Component
+@AllArgsConstructor
 public class UserMapper {
-  public User toDomainAdmin(RestUser restUser) {
-    return User.builder()
-        .enabled(restUser.isEnabled())
-        .role(Role.ADMIN)
-        .joinedInstant(Instant.now(Clock.system(ZoneId.of("EUROPE/MOSCOU"))))
-        .email(restUser.getEmail())
-        .password(restUser.getPassword())
-        .build();
-  }
+  private final DomainService domainService;
 
-  public User toDomainCandidate(RestUser restUser) {
+  public User toDomain(RestUser restUser, Role role) {
     return User.builder()
+        .id(restUser.getId())
         .enabled(restUser.isEnabled())
-        .role(Role.CANDIDATE)
-        .joinedInstant(Instant.now(Clock.system(ZoneId.of("EUROPE/MOSCOU"))))
-        .email(restUser.getEmail())
-        .password(restUser.getPassword())
-        .build();
-  }
-
-  public User toDomainRecruiter(RestUser restUser) {
-    return User.builder()
-        .enabled(restUser.isEnabled())
-        .role(Role.RECRUITER)
-        .joinedInstant(Instant.now(Clock.system(ZoneId.of("EUROPE/MOSCOW"))))
+        .interests(stringToDomain(restUser.getInterests()))
+        .role(role)
+        .joinedInstant(Instant.now(Clock.system(ZoneId.of("GMT+3"))))
         .email(restUser.getEmail())
         .password(restUser.getPassword())
         .build();
@@ -42,12 +33,12 @@ public class UserMapper {
 
   public User toDomain(RestUser restUser) {
     return User.builder()
-        .id(restUser.getId())
         .enabled(restUser.isEnabled())
-        .role(restUser.getRole())
-        .joinedInstant(Instant.now(Clock.system(ZoneId.of("EUROPE/MOSCOW"))))
-        .email(restUser.getEmail())
+        .interests(stringToDomain(restUser.getInterests()))
         .password(restUser.getPassword())
+        .role(restUser.getRole())
+        .joinedInstant(Instant.now(Clock.system(ZoneId.of("GMT+3"))))
+        .email(restUser.getEmail())
         .build();
   }
 
@@ -55,10 +46,24 @@ public class UserMapper {
     return RestUser.builder()
         .id(user.getId())
         .enabled(user.getEnabled())
+        .interests(domainToString(user.getInterests()))
         .role(user.getRole())
         .joinedInstant(user.getJoinedInstant())
         .email(user.getEmail())
-        .password(user.getPassword())
         .build();
+  }
+
+  private Set<Domain> stringToDomain(List<String> domainNames) {
+    if (domainNames == null) {
+      return null;
+    }
+    return domainNames.stream().map(domainService::getByName).collect(Collectors.toSet());
+  }
+
+  private List<String> domainToString(Set<Domain> domains) {
+    if (domains == null) {
+      return null;
+    }
+    return List.of("lol");
   }
 }
